Changing List.Of() to Collections.emptyList() for clarity of purpose.